--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -3,6 +3,35 @@
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry"></script>
 
+<head>
+<style>
+.share-btn {
+    display: inline-block;
+    color: #ffffff;
+    border: none;
+    padding: 0.5em;
+    width: 4em;
+    box-shadow: 0 2px 0 0 rgba(0,0,0,0.2);
+    outline: none;
+    text-align: center;
+}
+
+.share-btn:hover {
+  color: #eeeeee;
+}
+
+.share-btn:active {
+  position: relative;
+  top: 2px;
+  box-shadow: none;
+  color: #e2e2e2;
+  outline: none;
+}
+
+.share-btn.twitter     { background: #55acee; }
+</style>
+</head>
+
 <div class="row"><!-- input-group -->
   <div class="col-md-4"></div>
   <div class="col-md-5">
@@ -76,7 +105,7 @@ geocoder.geocode( { 'address': "300 homer st Vancouver"}, function(results, stat
 
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
-                '<row> <button onclick="get_info('+ this.id +')">Show</button> <button onclick="myFunction()">Tweet</button> <a rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favorites</a></row>');
+                '<row> <button onclick="get_info('+ this.id +')">Show</button> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <a rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favorites</a></row>');
               infowindow.open(map, this);
             });
 
@@ -106,6 +135,10 @@ function initialize() {
   });
 
 
+}
+
+function myFunction() {
+  window.open("http://twitter.com/intent/tweet?url=www.h2go.com&text=Getting+hydrated+with+H2GO!&hashtags=quenched,H2GO","window name", "height=500,width=1000");
 }
 
 function computeDistance(pt1, pt2){
