--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -221,7 +221,7 @@ if(favourited) {
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
 
-                '<row> <button onclick="get_info('+ this.id +')">Info</button> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a>> <a rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favorites</a></row>');
+                '<row> <button onclick="get_info('+ this.id +')">Info</button> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <a rel="nofollow" data-method="delete" href="/favorite_water_fountains/'+this.id+'">Remove from favorites</a></row>');
 
               infowindow.open(map, this);
             });
@@ -231,7 +231,7 @@ if(favourited) {
             google.maps.event.addListener(marker, 'click', function(id) {
               infowindow.setContent('<p>Fountain Location: '+ this.info +'</p>' +
 
-                '<row> <button class="btn btn-default" onclick="get_info('+ this.id +')">Info</button> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <br> <div class="voffset2"></div> <a class="twitter-share-button" onclick="myFunction()" data-count="none">Tweet #H2GO</a> <br> </row>');
+                '<row> <button class="btn btn-default" onclick="get_info('+ this.id +')">Info</button>  <a class="btn btn-default" rel="nofollow" data-method="post" href="/favorite_water_fountains?water_fountain_id='+this.id+'">Add to favorites</a> <br> <div class="voffset2"></div> <a onclick="myFunction()" target="_blank" class="share-btn twitter"> <i class="fa fa-twitter"></i></a> <br> </row>');
 
 
               infowindow.open(map, this);
